--- a/resume.html
+++ b/resume.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
-   <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Egill Anton Hlöðversson - resume</title>
-      <!-- MY STYLESHEETS -->
-      <link rel="stylesheet" href="stylesheets/style.css">
-      <link rel="stylesheet" href="stylesheets/resume.css">
-   </head>
-   <body>
+<head>
+   <meta charset="utf-8">
+   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+   <meta name="viewport" content="width=device-width, initial-scale=1">
+   <title>Egill Anton Hlöðversson - resume</title>
+   <!-- MY STYLESHEETS -->
+   <link rel="stylesheet" href="stylesheets/style.css">
+   <link rel="stylesheet" href="stylesheets/resume.css">
+</head>
+<body>
 <!--       <div>
          <h1 id="main-header">My resume</h1>
       </div> -->
@@ -23,29 +23,29 @@
                <div class="set">
                   <p class="address">
                      <span class="value">
-	                     Laufbrekka 8<br />
-	                     200 Kópavogur<br />
-	                     Iceland					
+                       Laufbrekka 8<br />
+                       200 Kópavogur<br />
+                       Iceland					
+                    </span>
+                 </p>
+                 <div class="r">
+                  <p class="email">
+                     <label>E-mail:
+                        <span class="colon">:</span>
+                     </label> 
+                     <span class="value">
+                        <a href="mailto:egillanton@live.com">egillanton@live.com</a>
                      </span>
                   </p>
-                  <div class="r">
-                     <p class="email">
-                        <label>E-mail:
-                           <span class="colon">:</span>
-                        </label> 
-                        <span class="value">
-                           <a href="mailto:egillanton@live.com">egillanton@live.com</a>
-                        </span>
-                     </p>
-                     <p class="website">
-                        <label>Website
-                           <span class="colon">:</span>
-                        </label> 
-                        <span class="value"><a href="http://egillanton.com/">www.egillanton.com</a></span>
-                     </p>
-                     <p class="phone">
-                        <label>Phone<span class="colon">:</span></label> 
-                        <span class="value"><a href="tel:+3547894724">+354 789 4724</a></span></p>
+                  <p class="website">
+                     <label>Website
+                        <span class="colon">:</span>
+                     </label> 
+                     <span class="value"><a href="http://egillanton.com/">www.egillanton.com</a></span>
+                  </p>
+                  <p class="phone">
+                     <label>Phone<span class="colon">:</span></label> 
+                     <span class="value"><a href="tel:+3547894724">+354 789 4724</a></span></p>
                   </div>
                   <div class="clear"> </div>
                </div>
@@ -180,42 +180,62 @@
                <div class="item">
                   <span class="info">
                      <div>
-                        <div>Languages: C, C#, C++, Java, Javascript, Pyhton, SQL</div>
-                        <div>Framworks: ASP.NET MVC, Xamarin.Forms</div>
-                     </div>
-                  </span>
-               </div>
-            </div>
-            <div class="clear"> </div>
-         </div>
+                        <div>
+                           <div><div><h3>Programming Langauges</h3></div>
+                           <div>C, C++, C#, Java, JavaScript, Python</div></div>
+                        </div>
+                        <div>
+                           <div><h3>Mobile Development</h3></div>
+                           <div>Xamarin.Forms, C#, XAMl, MVVM</div>
+                        </div>
+                        
+                        <div>
+                           <div><h3>Web Development</h3></div>
+                           <div>HTML5, CSS3, JavaScript, Handlebar, SASS, React</div>
+                           <div>ASP .NET MVC, C#, SOAP, REST, JSON</div>
+                           <div>Express, Node.js, Npm, MongoDB, Socket.IO, Mongoose, Mocha</div>
+                        </div>
+                        <div>
+                          <div><h3>Other Tools</h3></div>
+                          <div>Application deployment with Heroku</div>
+                          <div>Version control with Git</div>
+                          <div>Code testing, TDD</div>
+                          <div>Debugging</div>
+                       </div>
+                    </div>
+                 </span>
+              </div>
+           </div>
+           <div class="clear"> </div>
+        </div>
 
-         <div class="section section-qualifications">
-            <h2 class="title">Languages</h2>
-            <div class="set">
-               <div class="item">
-                  <span class="info">
-                     <div>Icelandic : Fluent/ Native</div>
-                     <div>English : Fluent (15 years, of study and practice)</div>
-                     <div>Spanish : Intermediate (3 years, of study and practice)</div>
-                     <div>Danish : Low Intermediate (6 years of study)</div>
-                  </span>
-               </div>
+        <div class="section section-qualifications">
+         <h2 class="title">Languages</h2>
+         <div class="set">
+            <div class="item">
+               <span class="info">
+                  <div>Icelandic : Fluent/ Native</div>
+                  <div>English : Fluent (15 years, of study and practice)</div>
+                  <div>Spanish : Intermediate (3 years, of study and practice)</div>
+                  <div>Danish : Low Intermediate (6 years of study)</div>
+               </span>
             </div>
-            <div class="clear"> </div>
          </div>
-         <div class="section section-references">
-            <h2 class="title">References</h2>
-            <div class="set">
-               <div class="item">
-                  <span>References available upon request.</span>
-               </div>
+         <div class="clear"> </div>
+      </div>
+      <div class="section section-references">
+         <h2 class="title">References</h2>
+         <div class="set">
+            <div class="item">
+               <span>References available upon request.</span>
             </div>
-            <div class="clear"> </div>
          </div>
+         <div class="clear"> </div>
       </div>
-      </div>
-      <div class="footer">
-         <h5>2017</h5>
-      </div>
-   </body>
+   </div>
+</div>
+<div class="footer">
+   <h5>2017</h5>
+</div>
+</body>
 </html>
