--- a/resume.html
+++ b/resume.html
@@ -18,19 +18,33 @@
             <img src="images/profile.jpg" alt="My profile picture" />
          </div>
          <div class="header photo">
-            <h1 id="title">Egill Anton Hlöðversson</h1>
+            
+            <div id="title">
+               <h1 >Egill Anton Hlöðversson</h1>
+               <h2>Computer Scientist | Electrician</h2>
+            </div>
+            
             <div class="basic-info section">
                <div class="set">
                   <p class="address">
                      <span class="value">
-                       Laufbrekka 8<br />
-                       200 Kópavogur<br />
-                       Iceland					
-                    </span>
-                 </p>
-                 <div class="r">
+                      Laufbrekka 8<br />
+                      200 Kópavogur<br />
+                      Iceland					
+                   </span>
+                </p>
+
+               </p>
+               <div class="r">
+                                  <p class="birthday">
+                  <label>Date of birth:
+                     <span class="colon">:</span>
+                  </label> 
+                  <span class="value">
+                     19. January 1993
+                  </span>
                   <p class="email">
-                     <label>E-mail:
+                     <label>Email address:
                         <span class="colon">:</span>
                      </label> 
                      <span class="value">
@@ -44,8 +58,17 @@
                      <span class="value"><a href="http://egillanton.com/">www.egillanton.com</a></span>
                   </p>
                   <p class="phone">
-                     <label>Phone<span class="colon">:</span></label> 
+                     <label>Phone Number<span class="colon">:</span></label> 
                      <span class="value"><a href="tel:+3547894724">+354 789 4724</a></span></p>
+                     <p class="Nationality">
+                        <label>Nationality
+                           <span class="colon">:</span>
+                        </label> 
+                        <span class="value">Icelandic</span>
+                     </p>
+
+
+
                   </div>
                   <div class="clear"> </div>
                </div>
@@ -59,18 +82,23 @@
             <h2 class="title">Education</h2>
             <div class="set">
                <div class="item">
-                  <h3><span class="course l">Self-Driving Car Engineer Nanodegree</span>
-                     <span class="date r">July 2017 &mdash; Present</span>
-                  </h3>
-                  <div class="clear"> </div>
-                  <span class="school">Udacity</span>
-               </div>
-               <div class="item">
-                  <h3><span class="course l">B.Sc Computer Science</span>
+                  <h3><span class="course l">B.Sc Computer Science (GPA: 3.7)</span>
                      <span class="date r">Aug 2014 &mdash; Jun 2017</span>
                   </h3>
                   <div class="clear"> </div>
                   <span class="school">Reykjavik University</span>
+                  <span class="info">
+                     <div>
+                        <div>
+                           <div>Programming, Data Structures, Web-Programming, Operating Systems (Linux / Unix) </div>
+                           <div>Software Engineering, Testing</div>
+                           <div>Algorithms, Artificial Intelligence, Artificial Neural Networks</div>
+                           <div>Discrete Mathematics, Calculus, Statistics, Linear Algebra</div>
+                           <div>Computer Graphics, Game Engine Architecture</div>
+                           <div>Interactive Technology, Robots</div>
+                        </div>
+                     </div>
+                  </span>
                </div>
                <div class="item">
                   <h3><span class="course l">Student Exchange</span>
@@ -80,14 +108,14 @@
                   <span class="school">Universitas Gadjah Mada</span>
                </div>
                <div class="item">
-                  <h3><span class="course l">Electrician Journeyman with Associate degree</span>
+                  <h3><span class="course l">Electrician Journeyman with Associate degree (GPA: 4.0)</span>
                      <span class="date r">Aug 2011 &mdash; Dec 2013</span>
                   </h3>
                   <div class="clear"> </div>
                   <span class="school">Fjölbrautaskólinn í Breiðholti</span><span class="clear"> </span>
                </div>
                <div class="item">
-                  <h3><span class="course l">High School Education</span>
+                  <h3><span class="course l">High School Education (GPA: 3.9)</span>
                      <span class="date r">Jul 2009 &mdash; Dec 2010</span>
                   </h3>
                   <div class="clear"> </div>
@@ -105,22 +133,30 @@
                   </h3>
                   <div class="clear"> </div>
                   <span class="job_title">Teacher Assistance</span>
+                  <span class="info">
+                     <div>
+                        <div>
+                           <div>Assisting students, and grading assignments</div>
+                        </div>
+                     </div>
+                  </span>
                   <div class="clear"> </div>
                </div>
                <div class="item">
                   <h3><span class="company l">Össur hf.</span>
-                     <span class="date r">June 2017 &mdash; August 2017</span>
+                     <span class="date r">Jan 2017 &mdash; August 2017</span>
                   </h3>
                   <div class="clear"> </div>
-                  <span class="job_title">Software Developer - Contractor</span>
-                  <div class="clear"> </div>
-               </div>
-               <div class="item">
-                  <h3><span class="company l">Össur hf.</span>
-                     <span class="date r">Jan 2017 &mdash; May 2017</span>
-                  </h3>
-                  <div class="clear"> </div>
-                  <span class="job_title">Student Intern</span>
+                  <span class="job_title">Student Intern, then Contract Software Developer</span>
+                  <span class="info">
+                     <div>
+                        <div>
+                           <div>Using Xamarin.Forms and .NET Standard to create a cross-platform application.</div>
+                           <div>The project follows the MVVM pattern, strict TDD, and SOLID principles.</div>
+                           <a href="https://skemman.is/bitstream/1946/28800/1/Final%20Report%20%28Lokask%C3%BDrsla%29.pdf">Click here to view the first report</a>
+                        </div>
+                     </div>
+                  </span>
                   <div class="clear"> </div>
                </div>
                <div class="item">
@@ -158,21 +194,6 @@
             </div>
             <div class="clear"> </div>
          </div>
-         <div class="section section-1489171035795">
-            <h2 class="title">Office Skills</h2>
-            <div class="set">
-               <div class="item">
-                  <span class="info">
-                     <div>
-                        <div>MS Word, Excel, PowerPoint, Sway</div>
-                        <div>Google Docs, Sheets, Slides</div>
-                        <div>Plot.ly</div>
-                     </div>
-                  </span>
-               </div>
-            </div>
-            <div class="clear"> </div>
-         </div>
 
          <div class="section section-1489171035795">
             <h2 class="title">Technical Skills</h2>
@@ -196,20 +217,20 @@
                            <div>Express, Node.js, Npm, MongoDB, Socket.IO, Mongoose, Mocha</div>
                         </div>
                         <div>
-                          <div><h3>Other Tools</h3></div>
-                          <div>Application deployment with Heroku</div>
-                          <div>Version control with Git</div>
-                          <div>Code testing, TDD</div>
-                          <div>Debugging</div>
-                       </div>
-                    </div>
-                 </span>
-              </div>
-           </div>
-           <div class="clear"> </div>
-        </div>
+                         <div><h3>Other Tools</h3></div>
+                         <div>Application deployment with Heroku</div>
+                         <div>Version control with Git</div>
+                         <div>Code testing, TDD</div>
+                         <div>Debugging</div>
+                      </div>
+                   </div>
+                </span>
+             </div>
+          </div>
+          <div class="clear"> </div>
+       </div>
 
-        <div class="section section-qualifications">
+       <div class="section section-qualifications">
          <h2 class="title">Languages</h2>
          <div class="set">
             <div class="item">
@@ -227,7 +248,7 @@
          <h2 class="title">References</h2>
          <div class="set">
             <div class="item">
-               <span>References available upon request.</span>
+               <span>Excellent references available on request.</span>
             </div>
          </div>
          <div class="clear"> </div>
