--- a/resume.html
+++ b/resume.html
@@ -128,8 +128,23 @@
             <h2 class="title">Work experience</h2>
             <div class="set">
                <div class="item">
+                  <h3><span class="company l">Advania</span>
+                     <span class="date r">January 2018 &mdash; Present</span>
+                  </h3>
+                  <div class="clear"> </div>
+                  <span class="job_title">Software Specialist</span>
+                  <span class="info">
+                     <div>
+                        <div>
+                           <a href="http://certification.salesforce.com/certification-detail?conId=0034A00002qSAB9QAO" target="_blank"><img src="images/SFU_CRT_BDG_Admin_RGB.png" alt="Salesforce Certified Administrator Badge" height="75"/></a>
+                        </div>
+                     </div>
+                  </span>
+                  <div class="clear"> </div>
+               </div>
+               <div class="item">
                   <h3><span class="company l">Reykjavik University</span>
-                     <span class="date r">August 2017 &mdash; Present</span>
+                     <span class="date r">August 2017 &mdash; December 2017</span>
                   </h3>
                   <div class="clear"> </div>
                   <span class="job_title">Teacher Assistance</span>
@@ -256,7 +271,7 @@
    </div>
 </div>
 <div class="footer">
-   <h5>2017</h5>
+   <h5>2018</h5>
 </div>
 </body>
 </html>
