--- a/resume.html
+++ b/resume.html
@@ -83,7 +83,7 @@
             <div class="set">
               <div class="item">
                  <h3><span class="course l">MSc. Language Technology</span>
-                    <span class="date r">Aug 2018 &mdash;  Currnt Position</span>
+                    <span class="date r">Aug 2018 &mdash;  Current Position</span>
                  </h3>
                  <div class="clear"> </div>
                  <span class="school">Reykjavik University</span>
