--- a/resume.html
+++ b/resume.html
@@ -143,7 +143,7 @@
             <div class="set">
                <div class="item">
                   <h3><span class="company l">Advania</span>
-                     <span class="date r">January 2018 &mdash; Present</span>
+                     <span class="date r">January 2018 &mdash; August 2018</span>
                   </h3>
                   <div class="clear"> </div>
                   <span class="job_title">Software Specialist</span>
