--- a/resume.html
+++ b/resume.html
@@ -141,6 +141,22 @@
          <div class="section section-work">
             <h2 class="title">Work experience</h2>
             <div class="set">
+              <div class="item">
+                 <h3><span class="company l">Reykjavik University</span>
+                    <span class="date r">August 2017 &mdash; Current Position</span>
+                 </h3>
+                 <div class="clear"> </div>
+                 <span class="job_title">Teacher Assistance</span>
+                 <span class="info">
+                    <div>
+                       <div>
+                          <div>Assisting students, and grading assignments</div>
+                          <div>Courses: Programming, Problem Solving, Game Engine Architecture, and Programming Languages</div>
+                       </div>
+                    </div>
+                 </span>
+                 <div class="clear"> </div>
+              </div>
                <div class="item">
                   <h3><span class="company l">Advania</span>
                      <span class="date r">January 2018 &mdash; August 2018</span>
@@ -156,7 +172,7 @@
                   </span>
                   <div class="clear"> </div>
                </div>
-               <div class="item">
+               <!-- <div class="item">
                   <h3><span class="company l">Reykjavik University</span>
                      <span class="date r">August 2017 &mdash; December 2017</span>
                   </h3>
@@ -170,7 +186,7 @@
                      </div>
                   </span>
                   <div class="clear"> </div>
-               </div>
+               </div> -->
                <div class="item">
                   <h3><span class="company l">Össur hf.</span>
                      <span class="date r">Jan 2017 &mdash; August 2017</span>
