--- a/resume.html
+++ b/resume.html
@@ -150,8 +150,8 @@
                  <span class="info">
                     <div>
                        <div>
-                          <div>Assisting students, and grading assignments</div>
-                          <div>Courses: Programming, Problem Solving, Game Engine Architecture, and Programming Languages</div>
+                          <div>Courses: Programming, Problem Solving, </div>
+                          <div>Game Engine Architecture, and Programming Languages</div>
                        </div>
                     </div>
                  </span>
@@ -162,14 +162,14 @@
                      <span class="date r">January 2018 &mdash; August 2018</span>
                   </h3>
                   <div class="clear"> </div>
-                  <span class="job_title">Software Specialist</span>
-                  <span class="info">
+                  <span class="job_title">Software Specialist, Salesforce Certified Administrator and Developer</span>
+                  <!-- <span class="info">
                      <div>
                         <div>
                            <a href="http://certification.salesforce.com/certification-detail?conId=0034A00002qSAB9QAO" target="_blank"><img src="images/SFU_CRT_BDG_Admin_RGB.png" alt="Salesforce Certified Administrator Badge" height="75"/></a>
                         </div>
                      </div>
-                  </span>
+                  </span> -->
                   <div class="clear"> </div>
                </div>
                <!-- <div class="item">
