--- a/resume.html
+++ b/resume.html
@@ -162,7 +162,14 @@
                      <span class="date r">January 2018 &mdash; August 2018</span>
                   </h3>
                   <div class="clear"> </div>
-                  <span class="job_title">Software Specialist, Salesforce Certified Administrator and Developer</span>
+                  <span class="job_title">Software Specialist</span>
+                  <span class="info">
+                     <div>
+                        <div>
+                           <div> Salesforce Certified Administrator and Developer</div>
+                        </div>
+                     </div>
+                  </span>
                   <!-- <span class="info">
                      <div>
                         <div>
