--- a/resume.html
+++ b/resume.html
@@ -91,6 +91,7 @@
                     <div>
                        <div>
                           <div>Natural Language Processing, Deep Learning, Machine Learning</div>
+                          <div>Speech Recognition, Speech Synthesis etc.</div>
                        </div>
                     </div>
                  </span>
