--- a/index.html
+++ b/index.html
@@ -1,54 +1,266 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
+
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Egill Anton Hlöðversson</title>
-	<!-- MY STYLESHEETS -->
-	<link rel="stylesheet" href="stylesheets/style.css">
-	<link rel="stylesheet" href="stylesheets/index.css">
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="My Personal Website">
+  <meta name="author" content="Egill Anton Hlöðversson">
+
+  <title>Egill Anton Hlöðversson</title>
+
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Custom fonts for this template -->
+  <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet">
+  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="css/resume.css" rel="stylesheet">
+
 </head>
-<body>
-	<div class="container">
-		<h1 id="main-header">Egill Anton</h1>
-		<img src="images/profile.jpg"  id="profileImage" alt="My Profile Picture">
-		<div class="btn-group">
-			<a class="btn" href="https://github.com/egillanton" role="button" target="_blank">code</a>
-			<a class="btn" href="https://www.facebook.com/egillanton" role="button" target="_blank">social</a>
-			<!-- <a class="btn" href="blog.html" role="button">blog</a> -->
-			<a class="btn" href="resume.html" role="button">resume</a>
-		</div>
-	</div>
+
+<body id="page-top">
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <span class="d-block d-lg-none">Egill Anton Hlöðversson</span>
+      <span class="d-none d-lg-block">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
+      </span>
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#about">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
+  <div class="container-fluid p-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
+      <div class="w-100">
+        <h1 class="mb-0">Egill Anton
+          <span class="text-primary">Hlöðversson</span>
+        </h1>
+        <div class="subheading mb-5">Klausutrstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
+          <a href="mailto:egillanton@live.com">egillanton@live.com</a>
+        </div>
+        <p class="lead mb-5">Natural Language Processing and Machine Learning expert with a keen interest in food and traveling.</p>
+        <div class="social-icons">
+          <a href="https://www.linkedin.com/in/egillanton">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/egillanton/">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.youtube.com/channel/UCWyc7nAIiWKDp0mtLO66ssg">
+            <i class="fab fa-youtube"></i>
+          </a>
+          <a href="https://www.facebook.com/egillanton">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
+      <div class="w-100">
+        <h2 class="mb-5">Experience</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Divot</h3>
+            <div class="subheading mb-3">Contracter</div>
+            <p>Create an Information Extraction toolkit for processing reciepts.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Reykjavik University</h3>
+            <div class="subheading mb-3">Teacher Assistance</div>
+            <p>Supervising undergraduate courses in Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2017 - December 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Advania</h3>
+            <div class="subheading mb-3">Software Specialist</div>
+            <p>As a Salesforce Certified Administrator and Developer, setup and service customer's needs.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2018 — August 2018</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Össur hf.</h3>
+            <div class="subheading mb-3">Student Intern, and a Contracter</div>
+            <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application, follow the MVVM pattern, strict TDD, and SOLID principles.</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">July 2010 - December 2011</span>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
+      <div class="w-100">
+        <h2 class="mb-5">Education</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Reykjavik University</h3>
+            <div class="subheading mb-3">Master of Science</div>
+            <div>Language Technology</div>
+            <p></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Reykjavik University</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>Computer Science</div>
+            <p>GPA: 3.7</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2014 - June 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
+          <div class="resume-content">
+            <h3 class="mb-0">Fjölbrautaskólinn í Breiðholti</h3>
+            <div class="subheading mb-3">Associate Degree</div>
+            <div>Electrician Journeyman</div>
+            <p>GPA: 4.0</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2011 - December 2013</span>
+          </div>
+        </div>
+        
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="skills">
+      <div class="w-100">
+        <h2 class="mb-5">Skills</h2>
+        <div class="subheading mb-3">Programming Languages &amp; Tools</div>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Natural Language Processing using Unix CLI, Bash Scripts, Python</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Machine Learning using Keras, Tensorflow, PyTorch</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Full-Stack Web Developer using Flask, Django, Node, ASP.NET</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Project Managing using Scrum, Git, Docker, Jira, CI</li>
+        </ul>
+      </div>
+      
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
+      <div class="w-100">
+        <h2 class="mb-5">Interests</h2>
+        <p>Apart from being a student, I enjoy most of my time being outdoors. In the summer during the warmer months, I enjoy trekking,  going on a road trip around the island, camping,  fishing, and swimming.</p>
+        <p class="mb-0">When forced indoors, I play multiplayer video games and watch an enormous amount of cooking shows. I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in language technology and machine learning.</p>
+      </div>
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="awards">
+      <div class="w-100">
+        <h2 class="mb-5">Awards &amp; Certifications</h2>
+        <ul class="fa-ul mb-0">
+          <li>
+            <i class="fa-li fa fa-award text-warning"></i>
+            Honorable Mention - University of Iceland - Reboot Hack, Hackathon 2018
+          </li>
+          <li>
+            <i class="fa-li fa fa-award text-warning"></i>
+            3<sup>st</sup> Place - Reykjavik University - University Championships in Programming 2018
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            Salesforce Certified Administrator - Advania 2018
+          </li>
+          <li>
+            <i class="fa-li fa fa-certificate text-warning"></i>
+            Salesforce Certified Developer - Advania 2018
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            Valedictorian - Fjölbrautaskólinn í Breiðholti - 2013
+          </li>
+        </ul>
+      </div>
+    </section>
+
+  </div>
+
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+
+  <!-- Custom scripts for this template -->
+  <script src="js/resume.min.js"></script>
+
 </body>
-<div id="footer" class="icon-group">
-	<a class="item" href="https://www.facebook.com/egillanton">
-		<img src="images/icons/FacebookIcon.png" >
-	</a>
-<!-- 	<a class="item" href="https://twitter.com/egill_anton">
-		<img src="images/icons/TwitterIcon.png" >
-	</a>
-	<a class="item" href="https://plus.google.com/107047887002688021953">
-		<img src="images/icons/GoogleIcon.png" >
-	</a>
-	<a class="item" href="https://www.instagram.com/egillanton/">
-		<img src="images/icons/InstagramIcon.png" >
-	</a> -->
-	<a class="item" href="skype:egillanton?call">
-		<img src="images/icons/SkypeIcon.png" >
-	</a>
-	<a class="item" href="https://www.youtube.com/channel/UCWyc7nAIiWKDp0mtLO66ssg">
-		<img src="images/icons/YoutubeIcon.png" >
-	</a>
-	<a class="item" href="https://github.com/egillanton">
-		<img src="images/icons/GitHubIcon.png" >
-	</a>
-	<a class="item" href="https://www.linkedin.com/in/egillanton/">
-		<img src="images/icons/LinkedInIcon.png" >
-	</a>
-	<a class="item" href="mailto:egillanton@live.com">
-		<img src="images/icons/EmailIcon.png" >
-	</a>
-</div>
 
 </html>
