--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Divot</h3>
-            <div class="subheading mb-3">Contracter</div>
-            <p>Create an Information Extraction toolkit for processing reciepts.</p>
+            <h3 class="mb-0"><a href="http://www.divot.is/">Divot</a></h3>
+            <div class="subheading mb-3">Contractor</div>
+            <p>Creating an Information Extraction toolkit for processing reciepts.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2019 - Present</span>
@@ -106,7 +106,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Reykjavik University</h3>
+            <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
             <div class="subheading mb-3">Teacher Assistance</div>
             <p>Supervising undergraduate courses in Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
           </div>
@@ -117,7 +117,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Advania</h3>
+            <h3 class="mb-0"><a href="https://advania.com/">Advania</a></h3>
             <div class="subheading mb-3">Software Specialist</div>
             <p>As a Salesforce Certified Administrator and Developer, setup and service customer's needs.</p>
           </div>
@@ -128,7 +128,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Össur hf.</h3>
+            <h3 class="mb-0"><a href="https://www.ossur.com/">Össur</a></h3>
             <div class="subheading mb-3">Student Intern, and a Contracter</div>
             <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application, follow the MVVM pattern, strict TDD, and SOLID principles.</p>
           </div>
@@ -148,7 +148,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Reykjavik University</h3>
+            <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
             <div class="subheading mb-3">Master of Science</div>
             <div>Language Technology</div>
             <p></p>
@@ -160,7 +160,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Reykjavik University</h3>
+            <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
             <div class="subheading mb-3">Bachelor of Science</div>
             <div>Computer Science</div>
             <p>GPA: 3.7</p>
@@ -172,7 +172,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">Fjölbrautaskólinn í Breiðholti</h3>
+            <h3 class="mb-0"><a href="https://www.fb.is/about-fb/">Fjölbrautaskólinn í Breiðholti</a></h3>
             <div class="subheading mb-3">Associate Degree</div>
             <div>Electrician Journeyman</div>
             <p>GPA: 4.0</p>
