--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
             <div class="subheading mb-3">Teacher Assistance</div>
-            <p>Supervising undergraduate courses in Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
+            <p>Supervising following undergraduate courses: Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2019</span>
@@ -119,7 +119,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://advania.com/">Advania</a></h3>
             <div class="subheading mb-3">Software Specialist</div>
-            <p>As a Salesforce Certified Administrator and Developer, setup and service customer's needs.</p>
+            <p>Servicing Salesforce for customers.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2018 — August 2018</span>
@@ -130,7 +130,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://www.ossur.com/">Össur</a></h3>
             <div class="subheading mb-3">Student Intern, and a Contracter</div>
-            <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application, follow the MVVM pattern, strict TDD, and SOLID principles.</p>
+            <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2010 - December 2011</span>
@@ -194,16 +194,24 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
-            Natural Language Processing using Unix CLI, Bash Scripts, Python</li>
+            Natural Language Processing using Unix CLI, Bash Scripts, Python
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Machine Learning using Keras, Tensorflow, PyTorch</li>
+            Machine Learning using Keras, Tensorflow, PyTorch
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Full-Stack Web Developer using Flask, Django, Node, ASP.NET</li>
+            Full-Stack Web Developing using Flask, Django, Node, ASP.NET
+          </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Project Managing using Scrum, Git, Docker, Jira, CI</li>
+            Cross-Platform Developing using Xamarin.Forms, Flutter, React Native
+          </li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Project Managing using Scrum, Git, Docker, Jira, CI
+          </li>
         </ul>
       </div>
       
