--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="subheading mb-5">Klausutrstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
           <a href="mailto:egillanton@live.com">egillanton@live.com</a>
         </div>
-        <p class="lead mb-5">Natural Language Processing and Machine Learning expert with a keen interest in food and traveling.</p>
+        <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food and traveling.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/egillanton">
             <i class="fab fa-linkedin-in"></i>
