--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="http://www.divot.is/">Divot</a></h3>
             <div class="subheading mb-3">Contractor</div>
-            <p>Creating an Information Extraction toolkit for processing reciepts.</p>
+            <p>Creating an Information Extraction toolkit for processing receipts.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">July 2019 - Present</span>
@@ -107,8 +107,8 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
-            <div class="subheading mb-3">Teacher Assistance</div>
-            <p>Supervising following undergraduate courses: Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
+            <div class="subheading mb-3">Teaching assistant</div>
+            <p>Supervising the following courses: Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2019</span>
@@ -129,7 +129,7 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://www.ossur.com/">Össur</a></h3>
-            <div class="subheading mb-3">Student Intern, and a Contracter</div>
+            <div class="subheading mb-3">Student Intern, Contractor</div>
             <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application</p>
           </div>
           <div class="resume-date text-md-right">
@@ -154,7 +154,7 @@
             <p></p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2019 - Present</span>
+            <span class="text-primary">August 2018 - Present</span>
           </div>
         </div>
 
@@ -210,7 +210,7 @@
           </li>
           <li>
             <i class="fa-li fa fa-check"></i>
-            Project Managing using Scrum, Git, Docker, Jira, CI
+            Project Management using Scrum, Git, Docker, Jira, CI
           </li>
         </ul>
       </div>
