--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1 class="mb-0">Egill Anton
           <span class="text-primary">Hlöðversson</span>
         </h1>
-        <div class="subheading mb-5">Klausutrstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
+        <div class="subheading mb-5">Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
           <a href="mailto:egillanton@live.com">egillanton@live.com</a>
         </div>
         <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food and traveling.</p>
@@ -239,7 +239,7 @@
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
-            3<sup>st</sup> Place - Reykjavik University - University Championships in Programming 2018
+            3<sup>rd</sup> Place - Reykjavik University - University Championships in Programming 2018
           </li>
           <li>
             <i class="fa-li fa fa-certificate text-warning"></i>
