data-nosnippet added

--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
         <h1 class="mb-0">Egill Anton
           <span class="text-primary">Hlöðversson</span>
         </h1>
-        <div class="subheading mb-5">Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
-          <a href="mailto:egillanton@live.com">egillanton@live.com</a>
+        <div class="subheading mb-5">
+        <span data-nosnippet>
+          Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
+          <a href="mailto:egillanton@live.com">egillanton@live.com</a></span>
         </div>
         <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food and traveling.</p>
         <div class="social-icons">
