--- a/index.html
+++ b/index.html
@@ -236,8 +236,12 @@
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
           <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup> Place - Virginia Commonwealth University - HealthHack, MLH Hackathon 2019
+          </li>
+          <li>
             <i class="fa-li fa fa-award text-warning"></i>
-            Honorable Mention - University of Iceland - Reboot Hack, Hackathon 2018
+            Honorable Mention - University of Iceland - Reboot Hack, MLH Hackathon 2018
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
