--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup> Place - Virginia Commonwealth University - HealthHack, MLH Hackathon 2019
+            1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks, MLH Hackathon 2019
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
