--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -67,11 +68,12 @@
           <span class="text-primary">Hlöðversson</span>
         </h1>
         <div class="subheading mb-5">
-        <span data-nosnippet>
-          Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
-          <a href="mailto:egillanton@live.com">egillanton@live.com</a></span>
+          <span data-nosnippet>
+            Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
+            <a href="mailto:egillanton@live.com">egillanton@live.com</a></span>
         </div>
-        <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food and traveling.</p>
+        <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food
+          and traveling.</p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/egillanton">
             <i class="fab fa-linkedin-in"></i>
@@ -110,7 +112,8 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
             <div class="subheading mb-3">Teaching assistant</div>
-            <p>Supervising the following courses: Programming, Game Engine Architecture, Problem Solving, and Programming Languages.</p>
+            <p>Supervising the following courses: Programming, Game Engine Architecture, Problem Solving, and
+              Programming Languages.</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2017 - December 2019</span>
@@ -183,7 +186,7 @@
             <span class="text-primary">August 2011 - December 2013</span>
           </div>
         </div>
-        
+
       </div>
     </section>
 
@@ -216,7 +219,7 @@
           </li>
         </ul>
       </div>
-      
+
     </section>
 
     <hr class="m-0">
@@ -224,8 +227,11 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
       <div class="w-100">
         <h2 class="mb-5">Interests</h2>
-        <p>Apart from being a student, I enjoy most of my time being outdoors. In the summer during the warmer months, I enjoy trekking,  going on a road trip around the island, camping,  fishing, and swimming.</p>
-        <p class="mb-0">When forced indoors, I play multiplayer video games and watch an enormous amount of cooking shows. I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in language technology and machine learning.</p>
+        <p>Apart from being a student, I enjoy most of my time being outdoors. In the summer during the warmer months, I
+          enjoy trekking, going on a road trip around the island, camping, fishing, and swimming.</p>
+        <p class="mb-0">When forced indoors, I play multiplayer video games and watch an enormous amount of cooking
+          shows. I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology
+          advancements in language technology and machine learning.</p>
       </div>
     </section>
 
@@ -241,7 +247,7 @@
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
-            Honorable Mention - University of Iceland - Reboot Hack, MLH Hackathon 2018
+            Honorable Mention - University of Iceland - Reboot Hack, MLH Hackathon 2019
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
