index.html Updated

--- a/index.html
+++ b/index.html
@@ -243,7 +243,10 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks, MLH Hackathon 2019
+            <a
+              href="https://vcuengineering.exposure.co/healthhacks-2019?fbclid=IwAR04mvwUH9v6U_O6hFdKauAEPuU5EOGW2_5t6ELCJYiHyALIlaiixKCBoPY">
+              1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks, MLH Hackathon 2019
+            </a>
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
