--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           <a class="nav-link js-scroll-trigger" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#leadership">Leadership</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#education">Education</a>
         </li>
         <li class="nav-item">
@@ -138,7 +141,49 @@
             <p>With the use of Xamarin.Forms and .NET Standard, create a cross-platform application</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">July 2010 - December 2011</span>
+            <span class="text-primary">January 2017 - December 2017</span>
+          </div>
+        </div>
+      </div>
+
+    </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="leadership">
+      <div class="w-100">
+        <h2 class="mb-5">Leadership</h2>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://nhhr.ru.is">Student Hackathon Association at Reykjavik University</a></h3>
+            <div class="subheading mb-3">Founder and managing director</div>
+            <p>Organized <a href="http://lingohack.is" target="_blank" rel="noopener noreferrer">Lingo Hack 2020</a></p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2019 - May 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://rumps.ru.is/">RUMPS</a></h3>
+            <div class="subheading mb-3">Events and Marketing Manager</div>
+            <p>Managed Student Events and Company Visits</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2019 - April 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0"><a href="https://advania.com/">Össur</a></h3>
+            <div class="subheading mb-3">Scrum Master</div>
+            <p>Project <a href="https://skemman.is/bitstream/1946/28800/1/Final%20Report%20%28Lokask%c3%bdrsla%29.pdf" target="_blank" rel="noopener noreferrer">TÝR</a> </p> 
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2017 - December 2017</span>
           </div>
         </div>
       </div>
