--- a/index.html
+++ b/index.html
@@ -156,6 +156,17 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
+            <h3 class="mb-0"><a href="https://rumps.ru.is/">Lingu OCR</a></h3>
+            <div class="subheading mb-3">Project Owner</div>
+            <p>OCR Document Reader Software for Icelandic</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2020 - May 2020</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
             <h3 class="mb-0"><a href="https://nhhr.ru.is">Student Hackathon Association at Reykjavik University</a></h3>
             <div class="subheading mb-3">Founder and managing director</div>
             <p>Organized <a href="http://lingohack.is" target="_blank" rel="noopener noreferrer">Lingo Hack 2020</a></p>
