--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="resume-content">
             <h3 class="mb-0"><a href="https://rumps.ru.is/">Lingu OCR</a></h3>
             <div class="subheading mb-3">Project Owner</div>
-            <p>OCR Document Reader Software for Icelandic</p>
+            <p>OCR Document Reader for Icelandic</p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2020 - May 2020</span>
