--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0"><a href="https://nhhr.ru.is">Student Hackathon Association at Reykjavik University</a></h3>
+            <h3 class="mb-0"><a href="http://nhvhr.ru.is">Student Hackathon Association at Reykjavik University</a></h3>
             <div class="subheading mb-3">Founder and managing director</div>
             <p>Organized <a href="http://lingohack.is" target="_blank" rel="noopener noreferrer">Lingo Hack 2020</a></p>
           </div>
