--- a/index.html
+++ b/index.html
@@ -299,14 +299,18 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
+            1<sup>st</sup> Place - University of Iceland - Reboot Hack 2020
+          </li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
             <a
               href="https://vcuengineering.exposure.co/healthhacks-2019?fbclid=IwAR04mvwUH9v6U_O6hFdKauAEPuU5EOGW2_5t6ELCJYiHyALIlaiixKCBoPY">
-              1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks, MLH Hackathon 2019
+              1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks 2019
             </a>
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
-            Honorable Mention - University of Iceland - Reboot Hack, MLH Hackathon 2019
+            Honorable Mention - University of Iceland - Reboot Hack 2019
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
