--- a/index.html
+++ b/index.html
@@ -299,18 +299,20 @@
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup> Place - University of Iceland - Reboot Hack 2020
+            <a href="https://www.hi.is/frettir/hatt_i_hundrad_haskolanemar_toku_thatt_i_reboot_hack?fbclid=IwAR10bNR3z3y8MX-eIfH_jmJg8md6fG4k1bpVzpYAO_mcuJLFEy8peE7Xc5Q" target="_blank" rel="noopener noreferrer">
+              1<sup>st</sup> Place - University of Iceland - Reboot Hack 2020 - Auðtré
+            </a>
           </li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             <a
               href="https://vcuengineering.exposure.co/healthhacks-2019?fbclid=IwAR04mvwUH9v6U_O6hFdKauAEPuU5EOGW2_5t6ELCJYiHyALIlaiixKCBoPY">
-              1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks 2019
+              1<sup>st</sup> Place - Virginia Commonwealth University - HealthHacks 2019 - Pillbug
             </a>
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
-            Honorable Mention - University of Iceland - Reboot Hack 2019
+            Honorable Mention - University of Iceland - Reboot Hack 2019 - BössTsjatt
           </li>
           <li>
             <i class="fa-li fa fa-award text-warning"></i>
