--- a/index.html
+++ b/index.html
@@ -252,6 +252,12 @@
                <ul class="fa-ul mb-0">
                   <li>
                      <i class="fa-li fa fa-trophy text-warning"></i>
+                     <a href="https://www.coronachallenge.fo/" target="_blank" rel="noopener noreferrer">
+                     2<sup>nd</sup> Place - North Atlantic Corona Challenge 2020 - ParentEd
+                     </a>
+                  </li>
+                  <li>
+                     <i class="fa-li fa fa-trophy text-warning"></i>
                      <a href="https://devpost.com/software/faraspara-64ac10" target="_blank" rel="noopener noreferrer">
                      Top 4  - Hack the Crises Iceland - FaraSpara.is
                      </a>
