--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                <h2 class="mb-5">Awards &amp; Certifications</h2>
                <ul class="fa-ul mb-0">
                   <li>
-                     <i class="fa-li fa fa-trophy text-warning"></i>
+                     <i class="fa-li fa fa-award text-warning"></i>
                      <a href="https://www.coronachallenge.fo/" target="_blank" rel="noopener noreferrer">
                      2<sup>nd</sup> Place - North Atlantic Corona Challenge 2020 - ParentEd
                      </a>
@@ -278,8 +278,8 @@
                      <i class="fa-li fa fa-award text-warning"></i> Honorable Mention - University of Iceland - Reboot Hack 2019 - BössTsjatt
                   </li>
                   <li>
-                     <i class="fa-li fa fa-award text-warning"></i> 3
-                     <sup>rd</sup> Place - Reykjavik University - University Championships in Programming 2018
+                     <i class="fa-li fa fa-award text-warning"></i> 
+                     3<sup>rd</sup> Place - Reykjavik University - University Championships in Programming 2018
                   </li>
                   <li>
                      <i class="fa-li fa fa-certificate text-warning"></i> Salesforce Certified Administrator - Advania 2018
