--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                      </a>
                   </li>
                   <li>
-                     <i class="fa-li fa fa-trophy text-warning"></i>
+                     <i class="fa-li fa fa-award text-warning"></i>
                      <a href="https://devpost.com/software/faraspara-64ac10" target="_blank" rel="noopener noreferrer">
                      Top 4  - Hack the Crises Iceland - FaraSpara.is
                      </a>
