--- a/index.html
+++ b/index.html
@@ -275,7 +275,10 @@
                      </a>
                   </li>
                   <li>
-                     <i class="fa-li fa fa-award text-warning"></i> Honorable Mention - University of Iceland - Reboot Hack 2019 - BössTsjatt
+                     <i class="fa-li fa fa-award text-warning"></i>
+                     <a href="https://devpost.com/software/bosstsjatt" target="_blank" rel="noopener noreferrer">
+                     Honorable Mention - University of Iceland - Reboot Hack 2019 - BössTsjatt
+                     </a>
                   </li>
                   <li>
                      <i class="fa-li fa fa-award text-warning"></i> 
