--- a/index.html
+++ b/index.html
@@ -84,17 +84,27 @@
          <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
             <div class="w-100">
                <h2 class="mb-5">Experience</h2>
-               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
+                  <div class="resume-content">
+                     <h3 class="mb-0"><a href="http://www.payday.is/">Payday ehf.</a></h3>
+                     <div class="subheading mb-3">Software Developer</div>
+                     <p>WordPress and Shopify Plugin Developer</p>
+                  </div>
+                  <div class="resume-date text-md-right">
+                     <span class="text-primary">May 2020 - Present</span>
+                  </div>
+               </div>
+               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                   <div class="resume-content">
                      <h3 class="mb-0"><a href="http://www.divot.is/">Divot</a></h3>
                      <div class="subheading mb-3">Contractor</div>
                      <p>Creating an Information Extraction toolkit for processing receipts.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                     <span class="text-primary">July 2019 - Present</span>
+                     <span class="text-primary">July 2019 - May 2020</span>
                   </div>
                </div>
-               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                   <div class="resume-content">
                      <h3 class="mb-0"><a href="https://en.ru.is/">Reykjavik University</a></h3>
                      <div class="subheading mb-3">Teaching assistant</div>
@@ -104,7 +114,7 @@
                      <span class="text-primary">August 2017 - December 2019</span>
                   </div>
                </div>
-               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                   <div class="resume-content">
                      <h3 class="mb-0"><a href="https://advania.com/">Advania</a></h3>
                      <div class="subheading mb-3">Software Specialist</div>
@@ -114,7 +124,7 @@
                      <span class="text-primary">January 2018 — August 2018</span>
                   </div>
                </div>
-               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+               <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                   <div class="resume-content">
                      <h3 class="mb-0"><a href="https://www.ossur.com/">Össur</a></h3>
                      <div class="subheading mb-3">Student Intern, Contractor</div>
@@ -259,7 +269,7 @@
                   <li>
                      <i class="fa-li fa fa-award text-warning"></i>
                      <a href="https://devpost.com/software/faraspara-64ac10" target="_blank" rel="noopener noreferrer">
-                     Top 4  - Hack the Crises Iceland - FaraSpara.is
+                     Top 4  - Hack the Crises Iceland 2020 - FaraSpara.is
                      </a>
                   </li>
                   <li>
