--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                </h1>
                <div class="subheading mb-5">
                   <span data-nosnippet>
-                  Klausturstigur 1 · 113 Reykjavik, Iceland · (+354) 789-4724 ·
+                  Nauthólsvegur 83 · 102 Reykjavik, Iceland · (+354) 789-4724 ·
                   <a href="mailto:egillanton@live.com">egillanton@live.com</a></span>
                </div>
                <p class="lead mb-5">Natural Language Processing and Machine Learning specialist with a keen interest in food and traveling.</p>
@@ -87,8 +87,8 @@
                <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-3">
                   <div class="resume-content">
                      <h3 class="mb-0"><a href="http://www.payday.is/">Payday ehf.</a></h3>
-                     <div class="subheading mb-3">Software Developer</div>
-                     <p>WordPress and Shopify Plugin Developer</p>
+                     <div class="subheading mb-3">System Integration Engineer</div>
+                     <p>Developing integration solutions for WooCommerce, Shopify, and other systems.</p>
                   </div>
                   <div class="resume-date text-md-right">
                      <span class="text-primary">May 2020 - Present</span>
